Sanghyun is added

--- a/COSE474-03.md
+++ b/COSE474-03.md
@@ -3,7 +3,7 @@
 | No   |      Name      | Department/Major |      Message |
 | ---- | :------------: | ---------------: | -----------: |
 | 1    | Hyunwoo J. Kim |               CS | Hello World! |
-| 2    | Sanghyun Lee   |	 Cyber Defense | I Love You   |
+| 2    | Sanghyun Lee   |	 Cyber Defense | I Love You!  |
 
 2021 Fall
 ==
